finally css part is completed, now react part started

--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,11 @@ html {
 }
 
 /* .main-div {
-  min-height: 100vh;
-  background: #060822;
-  display: flex;
-  justify-content: center;
+  height: 100%;
+}
+
+.child_div {
+  height: 100%;
 } */
 
 figure {
@@ -25,13 +26,13 @@ figure {
 }
 
 figure img {
-  width: 100px;
-  height: 110px;
-  margin-top: 80px;
+  width: 90px;
+  height: 90px;
+  margin-top: 50px;
 }
 
 figcaption {
-  font-size: 16px;
+  font-size: 12px;
   color: #fff;
   letter-spacing: 1px;
   font-weight: 300;
@@ -45,10 +46,10 @@ figcaption {
 
 .addItems input {
   width: 330px;
-  height: 35px;
+  height: 30px;
   background: #fff;
   color: black;
-  margin-top: 14px;
+  margin-top: 12px;
   padding-left: 8px;
   border: none;
   outline: none;
@@ -62,7 +63,7 @@ figcaption {
 
 .addItems .add-btn {
   position: absolute;
-  font-size: 18px;
+  font-size: 12px;
   padding: 30px 20px 14px 320px;
   background-color: transparent;
   color: #2980b9;
@@ -81,7 +82,7 @@ figcaption {
   align-items: center;
   padding: 0 10px 0 10px;
   width: 330px;
-  height: 35px;
+  height: 30px;
   background: #3c40c6;
   color: #fff;
   margin-top: 27px;
@@ -93,11 +94,77 @@ figcaption {
 }
 
 .showItems .eachItem h3 {
-  font-size: 12px;
+  font-size: 10px;
   background-color: transparent;
   text-transform: capitalize;
 }
 .showItems .eachItem .delete-btn {
-  font-size: 18px;
+  font-size: 12px;
   background-color: transparent;
+  cursor: pointer;
 }
+
+.showItems .btn {
+  position: relative;
+  margin-top: 20px;
+  display: inline-block;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  transition: 0.3s ease;
+  -webkit-transition: 0.3s ease;
+  -moz-transition: 0.3s ease;
+  -ms-transition: 0.3s ease;
+  -o-transition: 0.3s ease;
+}
+
+.showItems .btn.effect-04 {
+  width: 100px;
+  height: 30px;
+  background: #fff;
+  color: black;
+  font-size: 9px;
+  font-weight: 300;
+  letter-spacing: 1px;
+}
+
+.btn span {
+  display: inline-block;
+  background-color: transparent;
+  transition: transform 0.3s ease;
+  -webkit-transition: transform 0.3s ease;
+  -moz-transition: transform 0.3s ease;
+  -ms-transition: transform 0.3s ease;
+  -o-transition: transform 0.3s ease;
+}
+
+.btn::after {
+  content: attr(data-sm-link-text);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  color: #fff;
+  transition: transform 0.3s ease;
+  white-space: nowrap;
+  pointer-events: none;
+}
+
+.btn.effect-04:hover span {
+  transform: scale(0);
+}
+
+.btn.effect-04:hover::after {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+/* .showItems .btn:hover {
+  background-color: #3c40c6;
+} */
