--- a/src/App.css
+++ b/src/App.css
@@ -26,13 +26,13 @@ figure {
 }
 
 figure img {
-  width: 90px;
-  height: 90px;
+  width: 110px;
+  height: 100px;
   margin-top: 50px;
 }
 
 figcaption {
-  font-size: 12px;
+  font-size: 16px;
   color: #fff;
   letter-spacing: 1px;
   font-weight: 300;
@@ -46,10 +46,11 @@ figcaption {
 
 .addItems input {
   width: 330px;
-  height: 30px;
+  height: 35px;
   background: #fff;
   color: black;
   margin-top: 12px;
+  margin-bottom: 16px;
   padding-left: 8px;
   border: none;
   outline: none;
@@ -58,13 +59,14 @@ figcaption {
   -moz-border-radius: 3px;
   -ms-border-radius: 3px;
   -o-border-radius: 3px;
-  position: relative;
+  cursor: pointer;
 }
 
 .addItems .add-btn {
   position: absolute;
-  font-size: 12px;
-  padding: 30px 20px 14px 320px;
+  font-size: 16px;
+  margin-top: -3px;
+  margin-left: 300px;
   background-color: transparent;
   color: #2980b9;
   cursor: pointer;
@@ -72,6 +74,7 @@ figcaption {
 
 .showItems {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -82,26 +85,41 @@ figcaption {
   align-items: center;
   padding: 0 10px 0 10px;
   width: 330px;
-  height: 30px;
+  height: 37px;
   background: #3c40c6;
   color: #fff;
-  margin-top: 27px;
+  /* margin-top: 27px; */
+  margin-top: 6px;
   border-radius: 3px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   -ms-border-radius: 3px;
   -o-border-radius: 3px;
+  /* float: left; */
+}
+
+.showItems :hover {
+  background-color: #fff;
 }
 
 .showItems .eachItem h3 {
-  font-size: 10px;
+  font-size: 14px;
   background-color: transparent;
   text-transform: capitalize;
 }
+
+.eachItem:hover h3 {
+  color: black;
+}
+
 .showItems .eachItem .delete-btn {
-  font-size: 12px;
+  font-size: 14px;
   background-color: transparent;
   cursor: pointer;
+}
+
+.eachItem:hover .delete-btn {
+  color: red;
 }
 
 .showItems .btn {
