--- a/src/component/TabMenu/tab.css
+++ b/src/component/TabMenu/tab.css
@@ -4,8 +4,18 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 .main-heading {
   font-size: 18px;
-  height: 50px;
+  height: 18px;
   width: 100%;
+}
+
+.btn:hover {
+  background-color: #2d3436 !important;
+  color: #fff !important;
+  border: none !important;
 }
