--- a/src/component/TabMenu/tab.css
+++ b/src/component/TabMenu/tab.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Jost", sans-serif;
 }
 
 html {
@@ -9,13 +10,49 @@ html {
 }
 
 .main-heading {
-  font-size: 18px;
-  height: 18px;
-  width: 100%;
+  font-size: 25px;
+  height: 20px !important;
+  letter-spacing: 1px;
+  text-transform: capitalize;
 }
 
 .btn:hover {
   background-color: #2d3436 !important;
   color: #fff !important;
   border: none !important;
+}
+
+.img-fluid {
+  height: 160px !important;
+  border-top-left-radius: 8px !important;
+  border-bottom-left-radius: 10px !important;
+}
+
+h1 {
+  text-transform: uppercase;
+}
+
+p {
+  font-size: 14px;
+}
+
+h2 {
+  color: #16a085 !important;
+}
+
+.btnUpdate {
+  width: 85px !important;
+  height: 27px !important;
+  background-color: #16a085 !important;
+  color: #fff !important;
+  font-size: 12px !important;
+}
+
+.Item-inside {
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
 }
