--- a/src/component/TabMenu/tab.css
+++ b/src/component/TabMenu/tab.css
@@ -34,6 +34,7 @@ html {
   -moz-transform: scale(1.2) !important;
   -ms-transform: scale(1.2) !important;
   -o-transform: scale(1.2) !important;
+  cursor: pointer;
 }
 
 h1 {
